--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 }
@@ -34,9 +34,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.1.0'
 
     implementation "androidx.vectordrawable:vectordrawable-animated:$vectordrawable_version"
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
 
 
-
+    implementation 'com.android.support:appcompat-v7:29.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
